# lauterbach-trace32-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lauterbachdebugger_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
